--- a/EFGetStarted.csproj
+++ b/EFGetStarted.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.13.9" />
   </ItemGroup>
 
   <ItemGroup>
