--- a/EFGetStarted.csproj
+++ b/EFGetStarted.csproj
@@ -8,12 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="6.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
-    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.13.9" />
+    <!--<PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="6.13.9" />-->
   </ItemGroup>
 
   <ItemGroup>
